retrieveUnpackaged/objects/RelationPatientContact__c.object
<CustomObject>
    <fields>
        <fullName>ContactCity__c</fullName>
        <formula>Contact__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactLastName__c</fullName>
        <description>/</description>
        <formula>Contact__r.LastName</formula>
        <label>Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactMailingCity__c</fullName>
        <description>/</description>
        <formula>Contact__r.MailingCity</formula>
        <label>Contact Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactStreet__c</fullName>
        <formula>Contact__r.Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>/</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Relations Patient Contact</relationshipLabel>
        <relationshipName>RelationsPatientContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>/</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <description>/</description>
        <label>Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>RelationsPatientContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedPatient__c</fullName>
        <description>/</description>
        <label>Related Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipName>Related_RelationsPatientContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelationType__c</fullName>
        <description>/</description>
        <label>Relation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mentor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Relation Patient Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R{000000000}</displayFormat>
        <label>Relation Patient Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relations Patient Contact</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>